# MHO-C303-timesync

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
timesync/: CMakeLists.txt  cron-c303-timesync  main.cpp
